--- a/nutricia.kz/index.html
+++ b/nutricia.kz/index.html
@@ -9,99 +9,98 @@
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
   <title>Nutricia</title>
- 
+
 </head>
 
 <body>
   <main>
-  <section class="content">
-    <div class="content-top" style="background-image: url(../images/slider.png)">
-      <div class="container">
-        <div class="content-top__title">
-          Круглый стол для врачей
-          <a href="#app">
-            <button>
-              принять участие
-            </button>
-          </a>
-        </div>
-      </div>
-    </div>
-     <div class="content-know">
-      <div class="container">
-        <div class="know__title">
-          Nutridrink<sup>&#174;</sup> помогает вернуть силы после болезни* 
-          <div class="know__cov">в том числе  при COVID 19</div>
-        </div>
-        <div class="know">Вы узнаете:</div>
-        <div class="know__items">
-          <div class="know__item">
-            <div class="know__item-icon">
-              <img src="images/know-1.png" alt="icon">
-            </div>
-            <div class="know__item-text">
-              О влиянии специализированного лечебного питания на улучшение  
-              качества жизни и восстановление пациентов с COVID-19.
-            </div>
-          </div>
-          <div class="know__item">
-            <div class="know__item-icon">
-              <img src="images/know-2.png" alt="icon">
-            </div>
-            <div class="know__item-text">
-              О современном продукте Nutridrink® 200 ml (жидкое, готовое к употреблению 
-              специализированное лечебное питание) - способ применения, показания, состав, области применения.
-            </div>
-          </div>
-          <div class="know__item">
-            <div class="know__item-icon">
-              <img src="images/know-3.png" alt="icon">
-            </div>
-            <div class="know__item-text">
-              О данных международных клинических исследований влияния дополнительной 
-              нутриционной поддержки на восстановление физического здоровья пациентов с COVID-19.
-            </div>
+    <section class="content">
+      <div class="content-top" style="background-image: url(./images/slider.png)">
+        <div class="container">
+          <div class="content-top__title">
+            Круглый стол для врачей
+            <a href="#app">
+              <button>
+                принять участие
+              </button>
+            </a>
           </div>
         </div>
       </div>
-    </div>
-    <div class="content-app" id="app">
-      <div class="app__title">Регистрация на Круглый стол</div>
-      <div class="app__date">26 Сентября 2021 14:30</div>
-      <div class="app__address">город Алматы</div>
-      <div class="app__inputs">
-        <input type="text" placeholder="Имя">
-        <input type="text" placeholder="Фамилия">
-        <input type="text" placeholder="Место работы">
-        <input type="text" placeholder="e-mail">
-        <input type="text" placeholder="Контактный телефон">
-      </div>
-      <button type="submit">Принять участие</button>
-    </div>
-    <div class="content-bot">
-      <div class="container">
-        <div class="content-bot__title">Информационные партнёры:</div>
-        <div class="partners">
-          <div class="partner">
-            <img src="images/partner-2.png" alt="img">
+      <div class="content-know">
+        <div class="container">
+          <div class="know__title">
+            Nutridrink<sup>&#174;</sup> помогает вернуть силы после болезни*
+            <div class="know__cov">в том числе при COVID 19</div>
           </div>
-          <div class="partner">
-            <img src="images/partner-1.png" alt="img">
-          </div>
-          <div class="partner">
-            <img src="images/partner-3.png" alt="img">
+          <div class="know">Вы узнаете:</div>
+          <div class="know__items">
+            <div class="know__item">
+              <div class="know__item-icon">
+                <img src="images/know-1.png" alt="icon">
+              </div>
+              <div class="know__item-text">
+                О влиянии специализированного лечебного питания на улучшение
+                качества жизни и восстановление пациентов с COVID-19.
+              </div>
+            </div>
+            <div class="know__item">
+              <div class="know__item-icon">
+                <img src="images/know-2.png" alt="icon">
+              </div>
+              <div class="know__item-text">
+                О современном продукте Nutridrink® 200 ml (жидкое, готовое к употреблению
+                специализированное лечебное питание) - способ применения, показания, состав, области применения.
+              </div>
+            </div>
+            <div class="know__item">
+              <div class="know__item-icon">
+                <img src="images/know-3.png" alt="icon">
+              </div>
+              <div class="know__item-text">
+                О данных международных клинических исследований влияния дополнительной
+                нутриционной поддержки на восстановление физического здоровья пациентов с COVID-19.
+              </div>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  </section>
+      <div class="content-app" id="app">
+        <div class="app__title">Регистрация на Круглый стол</div>
+        <div class="app__date">26 Сентября 2021 14:30</div>
+        <div class="app__address">город Алматы</div>
+        <div class="app__inputs">
+          <input type="text" placeholder="Имя">
+          <input type="text" placeholder="Фамилия">
+          <input type="text" placeholder="Место работы">
+          <input type="text" placeholder="e-mail">
+          <input type="text" placeholder="Контактный телефон">
+        </div>
+        <button type="submit">Принять участие</button>
+      </div>
+      <div class="content-bot">
+        <div class="container">
+          <div class="content-bot__title">Информационные партнёры:</div>
+          <div class="partners">
+            <div class="partner">
+              <img src="images/partner-2.png" alt="img">
+            </div>
+            <div class="partner">
+              <img src="images/partner-1.png" alt="img">
+            </div>
+            <div class="partner">
+              <img src="images/partner-3.png" alt="img">
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
-</main>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-      crossorigin="anonymous">
+  </main>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
     </script>
-    <script src="js/main.js"></script>
+  <script src="js/main.js"></script>
 </body>
 
-</html> 
+</html>
