--- a/menmedia.kz/events-inner.html
+++ b/menmedia.kz/events-inner.html
@@ -16,7 +16,7 @@
 
 <body>
   <main id="app" ref="infoBox">
-    
+
 
     <header class="header">
       <transition name="fade" mode="out-in">
@@ -24,13 +24,13 @@
           <div class="container">
             <a href="index.html"><i class="icon-logo"></i></a>
             <div class="link">
-              <a class="link__item" href="about.html">О компании</a>            
-              <a class="link__item" href="#">Услуги</a>              
-              <a class="link__item" href="anons.html">Пресс-анонсы</a>              
-              <a class="link__item  link__item-active" href="events.html">Пресс-мероприятия</a>              
-              <a class="link__item" href="photos.html">Фото</a>              
-              <a class="link__item" href="videos.html">Видео</a>              
-              <a class="link__item" href="contacts.html">Контакты</a>  
+              <a class="link__item" href="about.html">О компании</a>
+              <a class="link__item" href="services.html">Услуги</a>
+              <a class="link__item" href="anons.html">Пресс-анонсы</a>
+              <a class="link__item link__item-active" href="events.html">Пресс-мероприятия</a>
+              <a class="link__item" href="photos.html">Фото</a>
+              <a class="link__item" href="videos.html">Видео</a>
+              <a class="link__item" href="contacts.html">Контакты</a>
             </div>
             <div class="info">
               <div class="dropdown">
@@ -132,138 +132,148 @@
       </transition>
     </header>
 
-    <div class="dark-wrapper"  :style="`height: ${height}`"></div>
+    <div class="dark-wrapper" :style="`height: ${height}`"></div>
 
     <section class="breadcrumbs">
-        <div class="container">
-            <ol class="breadcrumb">
-                <li class="breadcrumb-item">
-                    <a href="/">Главная</a>
-                </li> 
-                <li class="breadcrumb-item active" aria-current="page">
-                    Пресс-мероприятия
-                </li>
-            </ol>
-        </div>
+      <div class="container">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item">
+            <a href="/">Главная</a>
+          </li>
+          <li class="breadcrumb-item active" aria-current="page">
+            Пресс-мероприятия
+          </li>
+        </ol>
+      </div>
     </section>
 
     <section class="events events-bread">
-        <div class="container">            
-          <div class="title">Пресс-мероприятия</div>
-          <div class="announcements__head">
-            <a href="#" class="event-active">8 Июля 2021г.</a>
-          </div>
-          <div class="mixing">
-            <div class="mixing__items">
-              <div class="mixing__item">
-                <div class="images"><img src="img/announcements-2.png" alt=""></div>
-                <div class="info">
-                  <a href="#" class="title">
-                    Пресс-конференция на тему: <br>
-                    ”О привлечении иностранных инвестиций”
-                  </a>
-                  <div class="text" id="eventsText-1">Lorem Ipsum is simply dummy text of the printing and typesetting industry 1500s, when an unknown printer took a galley of type and scrambled it to...
-                  </div>
-                  <div class="data-time">
-                    <p>28 Март, 2021</p> <div><i class="icon-img"></i> :17</div> <div><i class="icon-video"></i> :3</div> <div> <i class="icon-files"></i> :4</div>
-                  </div>
-                  <div class="share">
-                    <div class="dropdown">
-                      <div class="button" type="button" data-bs-toggle="dropdown" id="dropdownMenuClickableInside" data-bs-auto-close="outside">
-                        <a href="#"><i class="icon-share"></i> <span>Поделиться</span></a>
-                      </div>
-                      <ul class="dropdown-menu" aria-labelledby="dropdownMenuClickableInside">
-                        <div class="share-icons">
-                          <a href="#"><i class="icon-facebook"></i></a>
-                          <a href="#"><i class="icon-instagram"></i></a>
-                          <a href="#"><i class="icon-vk"></i></a>
-                          <a href="#"><i class="icon-twitter"></i></a>
-                        </div>
-                        <div class="share-icons">
-                          <a href="#"><i class="bi bi-link-45deg"></i><p>Копировать 
-                            ссылку</p></a>
-                        </div>
-                      </ul>
+      <div class="container">
+        <div class="title">Пресс-мероприятия</div>
+        <div class="announcements__head">
+          <a href="#" class="event-active">8 Июля 2021г.</a>
+        </div>
+        <div class="mixing">
+          <div class="mixing__items">
+            <div class="mixing__item">
+              <div class="images"><img src="img/announcements-2.png" alt=""></div>
+              <div class="info">
+                <a href="#" class="title">
+                  Пресс-конференция на тему: <br>
+                  ”О привлечении иностранных инвестиций”
+                </a>
+                <div class="text" id="eventsText-1">Lorem Ipsum is simply dummy text of the printing and typesetting
+                  industry 1500s, when an unknown printer took a galley of type and scrambled it to...
+                </div>
+                <div class="data-time">
+                  <p>28 Март, 2021</p>
+                  <div><i class="icon-img"></i> :17</div>
+                  <div><i class="icon-video"></i> :3</div>
+                  <div> <i class="icon-files"></i> :4</div>
+                </div>
+                <div class="share">
+                  <div class="dropdown">
+                    <div class="button" type="button" data-bs-toggle="dropdown" id="dropdownMenuClickableInside"
+                      data-bs-auto-close="outside">
+                      <a href="#"><i class="icon-share"></i> <span>Поделиться</span></a>
                     </div>
-                  </div>
-                </div>                
-              </div>
-            </div>
-              <div class="events-inner__calendar">
-                <div class="mixing__calendar">
-                  <div class="items">
-                    <div class="items-header">Файлы для скачивания <i class="icon-zip"></i> <span>:25</span></div>
-                    <div class="item">
-                      <i class="icon-zip"></i> <p>19. март пресс м..</p> <p>136KB</p> <a href="#"><i class="bi bi-download"></i></a>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuClickableInside">
+                      <div class="share-icons">
+                        <a href="#"><i class="icon-facebook"></i></a>
+                        <a href="#"><i class="icon-instagram"></i></a>
+                        <a href="#"><i class="icon-vk"></i></a>
+                        <a href="#"><i class="icon-twitter"></i></a>
+                      </div>
+                      <div class="share-icons">
+                        <a href="#"><i class="bi bi-link-45deg"></i>
+                          <p>Копировать
+                            ссылку</p>
+                        </a>
+                      </div>
+                    </ul>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-        </div>    
-      </section>
-
-      <footer class="footer">
-        <div class="container">
-          <div class="footer__head">
-            <div class="content">
-              <div class="colom colom-1">
-                <a href="index.html"><i class="icon-logo"></i></a>
-                <p>Мен айтамын:</p>
-              </div>
-              <div class="colom colom-2">
-                <a href="#">О компании</a>
-                <a href="#">Услуги</a>
-                <a href="#">Пресс-анонсы</a>
-                <a href="#">Пресс-мероприятия</a>            
-              </div>
-              <div class="colom colom-3">
-                <a href="#">Фото</a>
-                <a href="#">Видео</a>
-                <a href="#">Контакты</a>
-                <a href="#">Новости</a>
-              </div>
-            </div>
-            <div class="content">
-              <div class="colom">
-                <div class="call">
-                  <i class="bi bi-telephone"></i>
-                  <div class="phone">
-                    <a href="tell:+77272455556">+7 (727) 245 55 56</a>
-                    <a href="tell:+77075666667">+7 (707) 566 66 67</a>   
-                  </div>             
-                </div>
-                <div class="mess">
-                  <i class="bi bi-envelope"></i>
-                  <a href="#">info@menmedia.kz</a>
-                </div>
-                <div class="network">
-                  <a href="#"><i class="icon-facebook"></i></a>
-                  <a href="#"><i class="icon-instagram"></i></a>
-                  <a href="#"><i class="icon-vk"></i></a>
-                  <a href="#"><i class="icon-twitter"></i></a>
+          <div class="events-inner__calendar">
+            <div class="mixing__calendar">
+              <div class="items">
+                <div class="items-header">Файлы для скачивания <i class="icon-zip"></i> <span>:25</span></div>
+                <div class="item">
+                  <i class="icon-zip"></i>
+                  <p>19. март пресс м..</p>
+                  <p>136KB</p> <a href="#"><i class="bi bi-download"></i></a>
                 </div>
               </div>
-            </div>
-          </div>
-          <div class="hr"></div>
-          <div class="footer__bottom">
-            <div class="content">
-              <p>© 2021 menmedia.kz. Все права  защищены.</p><span>|</span><p>Политика конфидециальности</p>
-            </div>
-            <div class="content">
-              <a href="#"><i class="icon-logo-IM"></i></a>
             </div>
           </div>
         </div>
-      </footer>
-  
-    </main>
-    <script src="js/carousel.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-      crossorigin="anonymous"></script>
-    <script src="js/script.js"></script>
-  </body>
-  
-  </html>
+      </div>
+    </section>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__head">
+          <div class="content">
+            <div class="colom colom-1">
+              <a href="index.html"><i class="icon-logo"></i></a>
+              <p>Мен айтамын:</p>
+            </div>
+            <div class="colom colom-2">
+              <a href="#">О компании</a>
+              <a href="#">Услуги</a>
+              <a href="#">Пресс-анонсы</a>
+              <a href="#">Пресс-мероприятия</a>
+            </div>
+            <div class="colom colom-3">
+              <a href="#">Фото</a>
+              <a href="#">Видео</a>
+              <a href="#">Контакты</a>
+              <a href="#">Новости</a>
+            </div>
+          </div>
+          <div class="content">
+            <div class="colom">
+              <div class="call">
+                <i class="bi bi-telephone"></i>
+                <div class="phone">
+                  <a href="tell:+77272455556">+7 (727) 245 55 56</a>
+                  <a href="tell:+77075666667">+7 (707) 566 66 67</a>
+                </div>
+              </div>
+              <div class="mess">
+                <i class="bi bi-envelope"></i>
+                <a href="#">info@menmedia.kz</a>
+              </div>
+              <div class="network">
+                <a href="#"><i class="icon-facebook"></i></a>
+                <a href="#"><i class="icon-instagram"></i></a>
+                <a href="#"><i class="icon-vk"></i></a>
+                <a href="#"><i class="icon-twitter"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="hr"></div>
+        <div class="footer__bottom">
+          <div class="content">
+            <p>© 2021 menmedia.kz. Все права защищены.</p><span>|</span>
+            <p>Политика конфидециальности</p>
+          </div>
+          <div class="content">
+            <a href="#"><i class="icon-logo-IM"></i></a>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+  </main>
+  <script src="js/carousel.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+  <script src="js/script.js"></script>
+</body>
+
+</html>
