made main page adaptive

--- a/oftum.kz/index.html
+++ b/oftum.kz/index.html
@@ -335,9 +335,7 @@
                 </div>
                 <div class="services__content">
                     <div class="services__item">
-                        <picture>
-                            <img src="img/serv1.png" alt="img">
-                        </picture>
+                        <img src="img/serv1.png" alt="img">
                         <div class="services__item-info">
                             <div class="services__item-title">
                                 <a href="">Лазерная коррекция зрения</a>
@@ -357,9 +355,7 @@
                         </a>
                     </div>
                     <div class="services__item">
-                        <picture>
-                            <img src="img/serv2.png" alt="img">
-                        </picture>
+                        <img src="img/serv2.png" alt="img">
                         <div class="services__item-info">
                             <div class="services__item-title">
                                 <a href="">Лазерная коагуляция сетчатки глаза</a>
@@ -377,9 +373,7 @@
                         </a>
                     </div>
                     <div class="services__item">
-                        <picture>
-                            <img src="img/serv3.png" alt="img">
-                        </picture>
+                        <img src="img/serv3.png" alt="img">
                         <div class="services__item-info">
                             <div class="services__item-title">
                                 <a href="">Синдром сухого глаза</a>
@@ -397,9 +391,7 @@
                         </a>
                     </div>
                     <div class="services__item">
-                        <picture>
-                            <img src="img/serv4.png" alt="img">
-                        </picture>
+                        <img src="img/serv4.png" alt="img">
                         <div class="services__item-info">
                             <div class="services__item-title">
                                 <a href="">Кератоконус</a>
@@ -420,7 +412,7 @@
                 </div>
             </section>
         </div>
-        <!-- <section class="leader">
+        <section class="leader">
             <div class="container">
                 <div class="leader__left">
                     <div class="leader__left-name mainTitle2">
@@ -879,7 +871,7 @@
                 </div>
             </div>
         </section>
-        <section class="standarts">
+        <!-- <section class="standarts">
             <div class="standarts__top">
                 <div class="container">
                     <div class="standarts__title mainTitle">
@@ -935,14 +927,14 @@
             <div class="standarts__all">
                 <a href="gallery.html">Фотогалерея</a>
             </div>
-        </section>
+        </section> -->
         <section class="video">
             <div class="container">
                 <div class="video__title mainTitle">
                     <b>Видеопрезентация</b> клиники
                 </div>
                 <div class="video__content">
-                    <video width="100%" height="440" controls>
+                    <video width="100%" controls>
                         <source src="img/video.mp4" type="video/mp4">
                         <source src="img/video.mp4" type="video/ogg">
                     </video>
@@ -955,9 +947,9 @@
                     <b> Наши </b>клиники
                 </div>
                 <div class="clinics__content">
-                    <div class="clinics__item" id="clinic__item-0">
-                        <div class="clinics__item-head" id="clinic__head-0">Oftum в г. Алматы</div>
-                        <div class="clinics__item-body" id="clinic__body-0">
+                    <div class="clinics__item">
+                        <div class="clinics__item-head">Oftum в г. Алматы</div>
+                        <div class="clinics__item-body">
                             <div class="clinics__address">
                                 <b>Адрес:</b>
                                 <span>
@@ -983,9 +975,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="clinics__item" id="clinic__item-1">
-                        <div class="clinics__item-head" id="clinic__head-1">Oftum в г. Астана</div>
-                        <div class="clinics__item-body" id="clinic__body-1">
+                    <div class="clinics__item">
+                        <div class="clinics__item-head">Oftum в г. Астана</div>
+                        <div class="clinics__item-body">
                             <div class="clinics__address">
                                 <b>Адрес:</b>
                                 <span>
@@ -1011,9 +1003,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="clinics__item" id="clinic__item-2">
-                        <div class="clinics__item-head" id="clinic__head-2">Oftum в Словакии, г. Кошице</div>
-                        <div class="clinics__item-body" id="clinic__body-2">
+                    <div class="clinics__item">
+                        <div class="clinics__item-head">Oftum в Словакии, г. Кошице</div>
+                        <div class="clinics__item-body">
                             <div class="clinics__address">
                                 <b>Адрес:</b>
                                 <span>
@@ -1039,10 +1031,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="clinics__item" id="clinic__item-3">
-                        <div class="clinics__item-head" id="clinic__head-3">Oftum в Чехии, г. Прага</div>
+                    <div class="clinics__item">
+                        <div class="clinics__item-head">Oftum в Чехии, г. Прага</div>
                         <div class="clinics__item-body">
-                            <div class="clinics__address" id="clinic__body-3">
+                            <div class="clinics__address">
                                 <b>Адрес:</b>
                                 <span>
                                     г. Прага, City Empiria, 8-й этаж Na Strži 1702/65
@@ -1103,9 +1095,9 @@
                 </div>
                 <a href="">Читать далее</a>
             </div>
-        </section>-->
+        </section>
     </main>
-    <!-- <footer class="footer">
+    <footer class="footer">
         <div class="container">
             <div class="footer__top">
                 <div class="footer__top-logo">
@@ -1167,7 +1159,7 @@
                 </div>
             </div>
         </div>
-    </footer> -->
+    </footer>
 
     <div class="preloader" id="preloader">
         <img src="img/logo2.svg" alt="image">
