--- a/oftum.kz/index.html
+++ b/oftum.kz/index.html
@@ -871,7 +871,7 @@
                 </div>
             </div>
         </section>
-        <!-- <section class="standarts">
+        <section class="standarts">
             <div class="standarts__top">
                 <div class="container">
                     <div class="standarts__title mainTitle">
@@ -888,46 +888,118 @@
                 <div>
                     <div class="standarts__content">
                         <div class="standarts__item">
-                            <img src="img/standart1.png" alt="img">
+                            <picture>
+                                <img src="img/standart1.png" alt="img">
+                            </picture>
                         </div>
                         <div class="standarts__item">
-                            <img src="img/standart2.png" alt="img">
+                            <picture>
+                                <img src="img/standart2.png" alt="img">
+                            </picture>
                         </div>
                         <div class="standarts__item">
-                            <img src="img/standart3.png" alt="img">
+                            <picture>
+                                <img src="img/standart3.png" alt="img">
+                            </picture>
                         </div>
                         <div class="standarts__item">
-                            <img src="img/standart4.png" alt="img">
+                            <picture>
+                                <img src="img/standart4.png" alt="img">
+                            </picture>
                         </div>
                         <div class="standarts__item">
-                            <img src="img/standart5.png" alt="img">
+                            <picture>
+                                <img src="img/standart5.png" alt="img">
+                            </picture>
                         </div>
                     </div>
                 </div>
                 <div>
                     <div class="standarts__content">
                         <div class="standarts__item">
-                            <img src="img/standart1.png" alt="img">
+                            <picture>
+                                <img src="img/standart1.png" alt="img">
+                            </picture>
                         </div>
                         <div class="standarts__item">
-                            <img src="img/standart2.png" alt="img">
+                            <picture>
+                                <img src="img/standart2.png" alt="img">
+                            </picture>
                         </div>
                         <div class="standarts__item">
-                            <img src="img/standart3.png" alt="img">
+                            <picture>
+                                <img src="img/standart3.png" alt="img">
+                            </picture>
                         </div>
                         <div class="standarts__item">
-                            <img src="img/standart4.png" alt="img">
+                            <picture>
+                                <img src="img/standart4.png" alt="img">
+                            </picture>
                         </div>
                         <div class="standarts__item">
-                            <img src="img/standart5.png" alt="img">
+                            <picture>
+                                <img src="img/standart5.png" alt="img">
+                            </picture>
                         </div>
                     </div>
+                </div>
+            </div>
+            <div class="standarts__mobile">
+                <div class="standarts__item">
+                    <picture>
+                        <img src="img/standart1.png" alt="img">
+                    </picture>
+                </div>
+                <div class="standarts__item">
+                    <picture>
+                        <img src="img/standart2.png" alt="img">
+                    </picture>
+                </div>
+                <div class="standarts__item">
+                    <picture>
+                        <img src="img/standart3.png" alt="img">
+                    </picture>
+                </div>
+                <div class="standarts__item">
+                    <picture>
+                        <img src="img/standart4.png" alt="img">
+                    </picture>
+                </div>
+                <div class="standarts__item">
+                    <picture>
+                        <img src="img/standart5.png" alt="img">
+                    </picture>
+                </div>
+                <div class="standarts__item">
+                    <picture>
+                        <img src="img/standart1.png" alt="img">
+                    </picture>
+                </div>
+                <div class="standarts__item">
+                    <picture>
+                        <img src="img/standart2.png" alt="img">
+                    </picture>
+                </div>
+                <div class="standarts__item">
+                    <picture>
+                        <img src="img/standart3.png" alt="img">
+                    </picture>
+                </div>
+                <div class="standarts__item">
+                    <picture>
+                        <img src="img/standart4.png" alt="img">
+                    </picture>
+                </div>
+                <div class="standarts__item">
+                    <picture>
+                        <img src="img/standart5.png" alt="img">
+                    </picture>
                 </div>
             </div>
             <div class="standarts__all">
                 <a href="gallery.html">Фотогалерея</a>
             </div>
-        </section> -->
+        </section>
         <section class="video">
             <div class="container">
                 <div class="video__title mainTitle">
